students and professor work